--- a/paginaweb/javascript/css/style.eventos.css
+++ b/paginaweb/javascript/css/style.eventos.css
@@ -3,8 +3,8 @@ html {
   min-height: 100px;
   font-family: "helvética neve";
   text-align: justify;
-  Background: url(pizaaa.webp), 
-    Linear-gradient(to left, #ec2f2c, #fbff04);
+  Background: url(), 
+    Linear-gradient(to left, #ededed, #fbff04);
     
 }
 
